# datalad-osf

./: .all-contributorsrc  .appveyor.yml  .gitattributes  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  git-annex-remote-osf  requirements-devel.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other-issues.md
.github/workflows/: docbuild.yml  test_crippledfs.yml  test_win2019.yml
_datalad_buildsupport/: setup.py
changelog.d/: 20230608_092806_michael.hanke.md  README  scriv.ini
changelog.d/templates/: new_fragment.md.j2
datalad_helloworld/: __init__.py  _version.py
datalad_helloworld/tests/: test_register.py
datalad_osf/: __init__.py  _version.py  annex_remote.py  conftest.py  create-osf-remote  create_sibling_osf.py  credentials.py  git_remote.py  init-osf-remote  remote.py  utils.py
datalad_osf/osfclient/osfclient/models/: file.py
datalad_osf/tests/: __init__.py  fixtures.py  test_create_sibling_osf.py  test_osf.py  test_public.py  test_register.py  test_remote.py  utils.py
docs/source/: acknowledgements.rst  acknowledgments.rst  api.rst  cloneosfdata.rst  cmd.rst  conf.py  contact.rst  contributing.rst  example.rst  example_osf_and_github.rst  example_osf_export.rst  exportdatacode.rst  exportgitannexdata.rst  exporthumandata.rst  git-annex-utils.rst  index.rst  intro.rst  links.inc  running.rst  settingup.rst  tutorial.rst
docs/source/tutorial/: authentication.rst  cloneosfdata.rst  codealong.rst  exportdatacode.rst  exporthumandata.rst  exportmode.rst  osf-sibling.rst
scripts/: create-osf-remote  delete_ci_projects  git-annex-remote-osf  init-osf-remote
