[metadata]
url = https://github.com/datalad/datalad-osf
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension to interface with the Open Science Framework (OSF)
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    datalad >= 0.18.4
    datalad_next >= 1.0.0b2
    annexremote >= 1.4.0
    osfclient >= 0.0.5
packages = find:
include_package_data = True

[options.extras_require]
devel =
    pytest
    pytest-cov
    coverage

[options.packages.find]
# do not ship the build helpers
exclude=
    _datalad_buildsupport

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_osf/_version.py
versionfile_build = datalad_osf/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_osf/_version.py
